put photo in folder

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="tel:+38 096 111 11 11">38 096 111 11 11</a></li>
         </ul>
     </header>
+<main>
 
     <div>
         <section>
@@ -54,13 +55,27 @@
     </section>
     <section>
         <h3>Чим ми займаємося</h3>
+        <ul>
+            <li>
+                <img src="" width="370" alt="набір коду"/>
+            </li>
+            <li>
+                <img src="" width="370" alt="перевірка смартфону"/>
+            </li>
+            <li>
+                <img scr="" width="370" alt="вибір кольру"/>
+            </li>
+
+
+
+        </ul>
 
 
 
 
 
     </section>
-
+</main>
         
 </body>
 </html>
