--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button type="button">Замовити послугу</button>>
+        <button type="button">Замовити послугу</button>
       </section>
 
       <section>
@@ -132,9 +132,13 @@
 
     <footer>
       <a href="/">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
-      <address>info@devstudio.com</address>
-      <address>+38 096 111 11 11</address>
+      <address>
+        <ul>
+          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
